"Update package.json to include categories"

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
         "framework",
         "grid"
     ],
+    "categories": [
+        "CSS",
+        "Frameworks",
+        "UI"
+    ],
     "repositories": [
         {
             "type": "git", 
