jam name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Jeet",
+    "name": "jeet",
     "version": "3.0.2",
     "description": "A light, semantic, responsive, CSS framework built from the best parts.",
     "homepage": "http://jeetframework.com",
