--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
     "version": "3.5.0",
     "main": [
         "index.html",
-        "css/jeet.styl",
+        "css/custom.styl",
         "js/main.js"
     ],
     "ignore": [
