--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "CSS",
         "Frameworks"
     ],
-    "repositories": [
+    "repository": [
         {
             "type": "git",
             "url": "https://github.com/mojotech/jeet.git"
