Ignore Node with .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-.DS_Store
+### Node ###
+lib-cov
+lcov.info
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+build
+.grunt
+
 node_modules
