--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "version": "4.1.1",
   "description": "A light, semantic, responsive, CSS framework built from the best parts.",
-  "homepage": "http://jeetframework.com",
+  "homepage": "http://jeet.gs",
   "keywords": [
     "stylus",
     "css",
