Update package.json tagline

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Cory Simmons / MojoTech",
   "main": "jeet.js",
   "version": "5.0.0",
-  "description": "A light, semantic, responsive, CSS framework built from the best parts.",
+  "description": "The most advanced, yet intuitive, grid system on the market today",
   "homepage": "http://jeet.gs",
   "keywords": [
     "stylus",
