--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "github": "http://github.com/mojotech/jeet",
   "devDependencies": {
     "stylus": "0.42.3",
+    "should": "3.1.3",
+    "mocha": "1.17.1",
+    "node-sass": "0.8.1"
+  },
   },
   "preferGlobal": true,
   "repository": {
