--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "stylus": "0.42.3",
     "should": "3.1.3",
     "mocha": "1.17.1",
-    "node-sass": "0.8.1"
+    "node-sass": "0.8.1",
+    "commander": "~2.1.0"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha tests/index.js"
