[cleanup] Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-.DS_Store
-.Spotlight-V100
-.Trashes
+# Created by http://www.gitignore.io
+
+### Node ###
+lib-cov
+lcov.info
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+build
+.grunt
+
 node_modules
-public
