--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "email": "cory@mojotech.com"
   },
   "license": "GPL-3.0+",
-  "homepage": "https://jeet.gs"
+  "homepage": "https://jeet.gs",
+  "dependencies": {
+    "stylus": "^0.42.3"
+  }
 }
