Ignore root public folder
Seems like an easy thing to accidentally create

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
+
+
+### Custom ###
+
+/public
