--- a/src/package.json
+++ b/src/package.json
@@ -10,5 +10,9 @@
     "rupture": "0.0.x",
     "jeet": "5.1.5",
     "roots": "^3.0.0-rc.5"
+  },
+  "scripts": {
+    "watch": "roots watch",
+    "compile": "roots compile"
   }
 }
