--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,9 @@
-/scss
 .editorconfig
+.gitignore
+/tests
+/scss/README.md
+/stylus/README.md
 CHANGELOG.md
-.travis.yml
+CONTRIBUTING.md
+LICENSE
+README.md
