--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   ],
   "github": "http://github.com/mojotech/jeet",
   "devDependencies": {
-    "stylus": "0.42.3",
+    "chai": "^1.9.1",
+    "css-diff": "^0.3.0",
+    "mocha": "^1.21.4",
+    "node-sass": "^0.9.3",
     "should": "3.1.3",
-    "mocha": "1.17.1"
+    "stylus": "^0.48.1"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha tests/index.js"
+    "test": "mocha tests"
   },
   "preferGlobal": true,
   "repository": {
