--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "homepage": "http://jeet.gs",
   "authors": [
     "Cory Simmons <csimmonswork@gmail.com>",
-    "Sam Saccone <sam@mojotech.com>"
+    "Sam Saccone <sam@mojotech.com>",
+    "Jake Cleary <shout@jakecleary.net>"
   ],
   "description": "A grid system for humans.",
   "main": [
