--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   ],
   "github": "http://github.com/mojotech/jeet",
   "devDependencies": {
-    "chai": "^1.9.1",
-    "css-diff": "^0.4.0",
-    "mocha": "^1.21.4",
-    "node-sass": "^0.9.3",
-    "should": "3.1.3",
-    "stylus": "^0.48.1"
+    "chai": "1.9.1",
+    "css-diff": "0.4.0",
+    "mocha": "1.21.4",
+    "node-sass": "0.9.3",
+    "should": "4.0.4",
+    "stylus": "0.48.1"
   },
   "scripts": {
     "test": "mocha tests"
