Update personal info

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "maintainers": [
     {
       "name": "Cory Simmons",
-      "email": "csimmonswork@gmail.com",
-      "web": "http://jeet.gs"
+      "email": "cory@launchboxhq.com",
+      "web": "http://launchboxhq.com"
     },
     {
       "name": "Sam Saccone",
