--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "7.0.0",
   "homepage": "http://jeet.gs",
   "authors": [
-    "Cory Simmons <csimmonswork@gmail.com>",
+    "Cory Simmons <cory@launchboxhq.com>",
     "Sam Saccone <sam@mojotech.com>",
     "Jake Cleary <shout@jakecleary.net>"
   ],
