Update Cory's info

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "jeet",
   "homepage": "http://jeet.gs",
   "authors": [
-    "Cory Simmons <csimmonswork@gmail.com>",
+    "Cory Simmons <cory@launchboxhq.com>",
     "Sam Saccone <sam@mojotech.com>",
     "Jake Cleary <shout@jakecleary.net>"
   ],
