--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
     "stylus": "0.42.x",
     "coffee-script": "1.x.x",
     "autoprefixer-stylus": "0.0.x",
-    "axis-css": "0.2.x",
+    "axis-css": "0.2.0-rc.3",
     "rupture": "0.0.x",
     "jeet": "5.1.5",
     "roots": "^3.0.0-rc.5"
