--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
       "name": "Jake Cleary",
       "email": "shout@jakecleary.net",
       "web": "http://jakecleary.net"
+    },
+    {
+      "name": "Braxton Fair"
+      "email": "hello@braxtonfair.xyz",
+      "web": "http://braxtonfair.xyz"
     }
   ],
   "main": "stylus/jeet.js",
