Forgot a trailing comma..

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "web": "http://jakecleary.net"
     },
     {
-      "name": "Braxton Fair"
+      "name": "Braxton Fair",
       "email": "hello@braxtonfair.xyz",
       "web": "http://braxtonfair.xyz"
     }
